part1/ex109/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-service
spec:
  selector:
    app: pong
  ports:
  - port: 3456
    targetPort: 8084
